Add the examples.
OT should really be in it's own lib.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,11 @@ edition = "2018"
 serde = "*"
 channels = { path = "./channels" }
 log = "*"
+
+[dev-dependencies]
+num = { version = "*", features = ["rand", "serde"] }
+# num-bigint = "*"
+openssl = "*"
+rand = "*"
+docopt = "*"
+env_logger = "*"
